<resources>
    <string name="ski_tab_lottery_hall">首页大厅</string>
    <string name="ski_tab_lottery_record">活动优惠</string>
    <string name="ski_tab_lottery_recharge">充值中心</string>
    <string name="ski_tab_lottery_personal">个人中心</string>


    <!--路子图-->
    <string name="ski_road_future">路{key}</string>
    <string name="ski_road_info">问路说明</string>
    <string name="ski_road_refresh">刷新</string>
    <string name="ski_road_info1">用大眼路举例：</string>
    <string name="ski_road_info2">的含义是：如果下一局</string>
    <string name="ski_road_info3">开大，那么下一届据此路将会显示</string>
    <string name="ski_road_info4">其余图标的应对关系逻辑相同</string>
    <string name="ski_road_info5">大\u2000O</string>
    <string name="ski_abc">abc...</string>

    <!--长龙-->
    <string name="ski_tv_long_dragon_remind_current">当前彩种</string>
    <string name="ski_tv_long_dragon_remind_setting">长龙提醒彩种设置</string>
    <string name="ski_tv_long_dragon_remind_hint">0个彩种</string>
    <string name="ski_chaseplan_cancel_num">取消追号（已选择{key}个）</string>
    <string name="ski_chase_list_dec">已完成{key1}期，共中奖{key2}期</string>

    <string name="ski_miss_remind_hint">提示：提示内容为【%s】,欲出率为【%s%%】</string>
    <string name="ski_tv_missing_remind_setting">遗漏提醒设置</string>
    <string name="ski_tv_use_default_setting">使用默认设置</string>
    <string name="ski_tv_lottery_num">已选择{key}个彩种</string>

    <string name="ski_login_register">注册成功!</string>


<!--    个人中心 -->
    <string name="ski_personal_info">基本信息</string>
    <string name="ski_my_unset">尚未设置</string>
    <string name="ski_my_update_head">修改头像</string>
    <string name="ski_my_nick_name">修改昵称</string>
    <string name="ski_my_login_pwd">修改登录密码</string>
    <string name="ski_my_money_pwd_update">修改资金密码</string>
    <string name="ski_my_money_pwd_set">设置资金密码</string>
    <string name="ski_my_safe_qua">安全问题设置</string>
    <string name="ski_my_bind_phone">绑定手机号</string>
    <string name="ski_my_bind_email">绑定邮箱</string>
    <string name="ski_my_game_set">游戏设置</string>
    <string name="ski_my_bank_card">银行卡管理</string>
    <string name="ski_my_bank_card_tip_1">1.银行卡添加成功后，平台任何区域都不会出现您完整的银行卡账号，开户名等信息。</string>
    <string name="ski_my_bank_card_tip_2">2.每个平台账号最多可以添加 5 张银行卡。</string>
    <string name="ski_my_bank_card_tip_3">3.每个账号只能添加同一个持卡人姓名的银行卡。</string>
    <string name="ski_my_bank_card_tip_4">4.添加银行卡信息后，需 12 小时后方可提现。</string>
    <string name="ski_my_bank_card_tip_5">5.必须绑定银行卡后方可提现。</string>
    <string name="ski_my_bank_card_add">添加银行卡</string>
    <string name="ski_my_bank_card_bind">绑定银行卡</string>
    <string name="ski_record_bet">投注记录</string>
    <string name="ski_record_money">账变记录</string>
    <string name="ski_record_money_after_balance">账变后余额:</string>
    <string name="ski_group_add">开立下级账户</string>
    <string name="ski_group_invite_url">推广链接</string>
    <string name="ski_group_invite_url_add">新增推广链接</string>
    <string name="ski_group_manage">团队会员管理</string>
    <string name="ski_group_record_bet">团队投注记录</string>
    <string name="ski_group_money_change">团队账变记录</string>
    <string name="ski_money_recharge">充值</string>
    <string name="ski_money_withdraw">提现</string>
    <string name="ski_money_progress">资金进度查询</string>
    <string name="ski_money_recharge_tip">温馨提示：为了您的资金能快速到账，请填入正确的入款姓名，勿随意更改支付金额，务必使用平台提示金额进行转账，避免不必要的延迟到账及不到账，否则造成的损失平台概不负责</string>
    <string name="ski_money_recharge_notice1">1.充值成功后请及时查看资金进度查询，若有问题请及时联系 在线客服。</string>
    <string name="ski_money_recharge_notice2">2.充值服务时间为 24小时。</string>
    <string name="ski_money_recharge_notice3">3.如网银充值因作业系统与浏览器版本问题，建议您使用支付宝或者微信充值。</string>
    <string name="ski_money_recharge_q_1">为什么充值未到账？</string>
    <string name="ski_money_recharge_q_2">如何使用网银充值？</string>
    <string name="ski_money_recharge_dialog_tip">请注意：重复付款或金额错误将无法到账！</string>
    <string name="ski_money_withdraw_tip">每日限制提款20 次，您已提款 0 次，每日提现额度：1000000 元。每日提现服务时间为 09:30-02:00</string>
    <string name="ski_money_withdraw_notice1">1.提现服务时间为 09:30-02:00。</string>
    <string name="ski_money_withdraw_notice2">2.同姓名同卡号等同账号，每日提现总金额最高 1000000 元整，提取次数上限为 20 次。</string>
    <string name="ski_money_withdraw_notice3">3.提现需进行充值金额满 25% 的投注，若未满足消费流水将 无法成功提现 。（例：充值100元需要投注25元才能进行提现）。</string>
    <string name="ski_money_withdraw_notice4">4.银行卡请务必正确填写开户银行和银行卡号码、持卡人姓名。</string>
    <string name="ski_money_withdraw_notice5">5.银行卡绑定后需生效后方可提现，第一张卡4小时生效，后续新增银行卡 12 小时生效。</string>
    <string name="ski_money_withdraw_notice6">6.当您提现申请完成后，我们承诺，除非遇到非可控因素，我们将为您提供1分钟 快速到账的提款服务。</string>
    <string name="ski_money_withdraw_q_1">为什么充值未到账？</string>
    <string name="ski_money_withdraw_q_2">如何使用网银充值？</string>
    <string name="ski_warm_tip">温馨提示</string>
    <string name="ski_sys_notice">公告中心</string>
</resources>
